# cs336-tutor-app

./: .gitignore  .hermes.md  AGENTS.md  README.md  build.gradle.kts  gradle.properties  llama.cpp  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/cs336/tutor/data/remote/: DeepSeekLLMProviderTest.kt
app/src/androidTest/java/com/cs336/tutor/ui/screens/: SettingsViewModelTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/cs336/tutor/data/local/: TutorDatabase.kt
app/src/main/java/com/cs336/tutor/data/remote/: DeepSeekLLMProvider.kt  HermesLLMProvider.kt  LocalLLMProvider.kt  MockLLMProvider.kt  ModelScopeDownloader.kt  NativeBridge.kt
app/src/main/java/com/cs336/tutor/data/repository/: TutorEngineImpl.kt
app/src/main/java/com/cs336/tutor/di/: AppModule.kt  TutorApplication.kt
app/src/main/java/com/cs336/tutor/domain/engine/: AttentionComponent.kt  BPEExplanationsZh.kt  ComponentExplanationsZh.kt  ComponentOverviews.kt  EmbeddingComponent.kt  FFNComponent.kt  FullCodeReviewComponent.kt  LMHeadComponent.kt  OptimizerComponent.kt  RMSNormComponent.kt  RoPEComponent.kt  TrainingLoopComponent.kt  TransformerBlockComponent.kt  TutorEngine.kt  bpe_component.kt
app/src/main/java/com/cs336/tutor/domain/model/: Models.kt
app/src/main/java/com/cs336/tutor/domain/provider/: LLMProvider.kt
app/src/main/java/com/cs336/tutor/ui/: MainActivity.kt  TutorApp.kt
app/src/main/java/com/cs336/tutor/ui/components/: ComponentCard.kt
app/src/main/java/com/cs336/tutor/ui/screens/: DashboardScreen.kt  DashboardViewModel.kt  ModelDownloadList.kt  SettingsScreen.kt  SettingsViewModel.kt  SplitScreenTutorScreen.kt  SplitScreenTutorViewModel.kt
app/src/main/java/com/cs336/tutor/ui/theme/: Color.kt  Theme.kt
app/src/main/python/: bpe_tokenizer.py
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/cs336/tutor/data/remote/: LocalLLMProviderTest.kt
app/src/test/java/com/cs336/tutor/domain/engine/: AttentionComponentTest.kt  BPEComponentTest.kt  EmbeddingComponentTest.kt  FFNComponentTest.kt  RMSNormComponentTest.kt  RoPEComponentTest.kt  TrainingLoopComponentTest.kt  TransformerBlockComponentTest.kt
docs/log/: opencode-session.txt
docs/log/en/: 01-dev-log.md
docs/log/zh/: 01-dev-log.md
docs/plan/en/: 01-mvp-plan.md  02-dynamic-content.md  03-local-llm-mobile.md  04-multimodal-teaching.md  05-roadmap.md  06-chat-history.md  07-full-code-review.md  09-custom-native-build.md
docs/plan/zh/: 01-mvp-plan.md
docs/spec/en/: 01-project-overview.md
docs/spec/zh/: 01-project-overview.md
docs/troubleshooting/: 01-wsl-file-sync.md
(+8 files in other folders)
